--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,33 +1,32 @@
 {
-    "extends": [
-        "eslint:recommended",
-        "plugin:import/errors",
-        "plugin:react/recommended",
-        "plugin:jsx-a11y/recommended"
-    ],
-    "plugins": ["react", "import", "jsx-a11y"],
-    "rules": {
-        "react/prop-types": 0,
-        "indent": ["error", 2],
-        "linebreak-style": 1,
-        "quotes": ["error", "double"]
-    },
-    "parserOptions": {
-        "ecmaVersion": 2021,
-        "sourceType": "module",
-        "ecmaFeatures": {
-        "jsx": true
-        }
-    },
-    "env": {
-        "es6": true,
-        "browser": true,
-        "node": true
-    },
-    "settings": {
-        "react": {
-        "version": "detect"
-        }
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended"
+  ],
+  "plugins": ["react", "import", "jsx-a11y"],
+  "rules": {
+    "react/prop-types": 0,
+    "linebreak-style": 1,
+    "quotes": ["error", "double"],
+    "react/react-in-jsx-scope": "off",
+    "react/no-unescaped-entities": "off"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
     }
-    
+  }
+}
