--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:import/errors",
-    "plugin:react/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:import/errors", "plugin:react/recommended"],
   "plugins": ["react", "import", "jsx-a11y"],
   "rules": {
     "react/prop-types": 0,
