--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
     "vercel-build": "echo yay",
-    "start:dev": "nodemon ./src/index.js"
+    "start:dev": "nodemon ./src/index.js",
+    "lint": "npx eslint ./src",
+    "lint:fix" : "npx eslint --fix ./src",
+    "preetier:write" : "npx prettier ./src --write",
+    "preetier:check" : "npx prettier ./src --check"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +30,16 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "3.3.3",
+    "typescript": "^5.5.4"
   }
 }
