--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,9 @@
     "vercel-build": "echo yay",
     "start:dev": "nodemon ./src/index.js",
     "lint": "npx eslint ./src",
-    "lint:fix" : "npx eslint --fix ./src",
-    "preetier:write" : "npx prettier ./src --write",
-    "preetier:check" : "npx prettier ./src --check"
+    "lint:fix": "npx eslint --fix ./src",
+    "preetier:write": "npx prettier ./src --write",
+    "preetier:check": "npx prettier ./src --check"
   },
   "keywords": [],
   "author": "",
@@ -32,9 +32,13 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
+    "@types/validator": "^13.12.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
