--- a/api/.prettierignore
+++ b/api/.prettierignore
@@ -1,3 +1,41 @@
 dist
 node_modules
 public
+./dist
+
+
+
+events {
+    # Event directives...
+}
+
+http {
+	server {
+    listen 80;
+    server_name bookers-backend.devsharmacode.com;
+
+    location / {
+        proxy_pass http://localhost:3500;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+	}
+}
+http {
+	server {
+    listen 80;
+    server_name bookers.devsharmacode.com;
+
+    location / {
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+	}
+}
