--- a/api/package.json
+++ b/api/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js",
+    "start": "tsc -b && node dist/index.js",
     "vercel-build": "echo yay",
-    "start:dev": "nodemon ./src/index.js",
+    "dev": "nodemon",
     "lint": "npx eslint ./src",
     "lint:fix": "npx eslint --fix ./src",
     "preetier:write": "npx prettier ./src --write",
@@ -38,12 +37,14 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
+    "@types/node": "^22.7.7",
     "@types/validator": "^13.12.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "3.3.3",
-    "typescript": "^5.5.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
