--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
+    "redis": "^5.5.6",
     "typescript": "^5.6.3",
     "validator": "^13.11.0"
   },
