--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/helmet": "^0.0.48",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
     "cookie-parser": "^1.4.6",
@@ -24,6 +26,8 @@
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
